# chemistry_draw

./: .gitignore  CHANGELOG.md  Cargo.toml  INDIGO_SIDECAR_PLAN.md  LICENSE  NOTICE  PKGBUILD  README.md  TODO.md  Taskfile.yml  index.html  package.json  pnpm-lock.yaml  release-please-config.json  vite.config.ts
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  release.yml
scripts/: build-appimage.sh  build-libs.sh  bundle-libs.sh  check-libs.sh
sidecar/: Cargo.toml  build.rs
sidecar/src/: handlers.rs  imago.rs  imago_jobs.rs  indigo.rs  main.rs  models.rs
sidecar/src/tests/: check.rs  imago_integration.rs  mod.rs  stereochemistry.rs
src/: App.tsx  tauri-file-saver.d.ts  tauri-file-saver.ts
src-tauri/: Cargo.toml  ketcher.mol  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/lib/linux-x86_64/: libIex-3_4.so.33  libIlmThread-3_4.so.33  libOpenEXR-3_4.so.33  libOpenEXRCore-3_4.so.33  libblas.so.3  libbrotlicommon.so.1  libbrotlidec.so.1  libbrotlienc.so.1  libbz2.so.1.0  libcblas.so.3  libdeflate.so.0  libexpat.so.1  libfontconfig.so.1  libfreetype.so.6  libhwy.so.1  libjbig.so.2.1  libjpeg.so.8  libjxl_cms.so.0.11  libjxl_threads.so.0.11  liblzma.so.5  libopencv_imgcodecs.so.413  libopenjp2.so.7  libopenjph.so.0.27  libpng16.so.16  libsharpyuv.so.0  libstdc++.so.6  libtbb.so.12  libtiff.so.6  libwebp.so.7  libwebpdemux.so.2  libwebpmux.so.3  libzstd.so.1
src-tauri/sidecar/: Cargo.toml  build.rs
src-tauri/sidecar/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/sidecar/src/ffi/: imago.rs  indigo.rs  mod.rs
src-tauri/sidecar/src/job/: imago_store.rs  mod.rs
src-tauri/sidecar/src/service/: imago_ops.rs  indigo_ops.rs  mod.rs  types.rs
src-tauri/sidecar/src/tests/: aromatize.rs  calculate.rs  check.rs  convert.rs  imago_integration.rs  info.rs  layout_clean.rs  mod.rs  render.rs  stereochemistry.rs  structural_errors.rs
src-tauri/sidecar/src/transport/: imago.rs  indigo.rs  info.rs  mod.rs
src-tauri/src/: lib.rs  main.rs
