[package]
name = "chemistry-draw"
version = "0.1.1"
description = "Unofficial desktop wrapper of the Ketcher chemical structure editor"
authors = ["Chemistry Draw Contributors"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "chemistry_draw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
