[package]
name = "indigo-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "indigo_server"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "indigo-server"
path = "src/main.rs"
test = false

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
base64 = "0.22"
libc = "0.2"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
http-body-util = "0.1"
tower = "0.5"
